@@ -6,10 +6,10 @@
  */
 package org.elasticsearch.xpack.esql.index;
 
+import org.elasticsearch.action.NoShardAvailableActionException;
 import org.elasticsearch.action.fieldcaps.FieldCapabilitiesFailure;
 import org.elasticsearch.core.Nullable;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -19,30 +19,33 @@ public final class IndexResolution {
     /**
      * @param index EsIndex encapsulating requested index expression, resolved mappings and index modes from field-caps.
      * @param resolvedIndices Set of concrete indices resolved by field-caps. (This information is not always present in the EsIndex).
+     * @param unavailableShards Set of shards that were unavailable during index resolution
      * @param unavailableClusters Remote clusters that could not be contacted during planning
      * @return valid IndexResolution
      */
     public static IndexResolution valid(
         EsIndex index,
         Set<String> resolvedIndices,
+        Set<NoShardAvailableActionException> unavailableShards,
         Map<String, FieldCapabilitiesFailure> unavailableClusters
     ) {
         Objects.requireNonNull(index, "index must not be null if it was found");
         Objects.requireNonNull(resolvedIndices, "resolvedIndices must not be null");
+        Objects.requireNonNull(unavailableShards, "unavailableShards must not be null");
         Objects.requireNonNull(unavailableClusters, "unavailableClusters must not be null");
-        return new IndexResolution(index, null, resolvedIndices, unavailableClusters);
+        return new IndexResolution(index, null, resolvedIndices, unavailableShards, unavailableClusters);
     }
 
     /**
      * Use this method only if the set of concrete resolved indices is the same as EsIndex#concreteIndices().
      */
     public static IndexResolution valid(EsIndex index) {
-        return valid(index, index.concreteIndices(), Collections.emptyMap());
+        return valid(index, index.concreteIndices(), Set.of(), Map.of());
     }
 
     public static IndexResolution invalid(String invalid) {
         Objects.requireNonNull(invalid, "invalid must not be null to signal that the index is invalid");
-        return new IndexResolution(null, invalid, Collections.emptySet(), Collections.emptyMap());
+        return new IndexResolution(null, invalid, Set.of(), Set.of(), Map.of());
     }
 
     public static IndexResolution notFound(String name) {
@@ -56,6 +59,7 @@ public final class IndexResolution {
 
     // all indices found by field-caps
     private final Set<String> resolvedIndices;
+    private final Set<NoShardAvailableActionException> unavailableShards;
     // remote clusters included in the user's index expression that could not be connected to
     private final Map<String, FieldCapabilitiesFailure> unavailableClusters;
 
@@ -63,11 +67,13 @@ public final class IndexResolution {
         EsIndex index,
         @Nullable String invalid,
         Set<String> resolvedIndices,
+        Set<NoShardAvailableActionException> unavailableShards,
         Map<String, FieldCapabilitiesFailure> unavailableClusters
     ) {
         this.index = index;
         this.invalid = invalid;
         this.resolvedIndices = resolvedIndices;
+        this.unavailableShards = unavailableShards;
         this.unavailableClusters = unavailableClusters;
     }
 
@@ -107,6 +113,13 @@ public final class IndexResolution {
      */
     public Set<String> resolvedIndices() {
         return resolvedIndices;
+    }
+
+    /**
+     * @return set of unavailable shards during index resolution
+     */
+    public Set<NoShardAvailableActionException> getUnavailableShards() {
+        return unavailableShards;
     }
 
     @Override
